fix(mvn_release): solve issue with easymock as update is not yet possible